loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:15: error: not found: value baggles
  if (baggles <= 2) {
      ^Poucet1:17: error: not found: value baggles
  } else if (baggles >= 3) {
             ^